--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "dependencies": {
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.0.1"
+    "@oclif/plugin-plugins": "^2.0.1",
+    "@octokit/core": "^4.0.4",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^8.2.4",
+    "node-fetch": "^3.2.10"
   },
   "devDependencies": {
     "@oclif/test": "^2",
     "@types/chai": "^4",
+    "@types/fs-extra": "^9.0.13",
+    "@types/inquirer": "^8.2.1",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.9.4",
     "chai": "^4",
